--- a/Session12/App.config
+++ b/Session12/App.config
@@ -8,7 +8,17 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="SessioEntities" connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL-SER-LARISA\SERV1215;initial catalog=Sessio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SessioEntities"
+         connectionString=
+         "metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;
+         provider=System.Data.SqlClient;
+         provider connection string=&quot;
+         data source=DESKTOP-NR8DVE4\SQLEXPRESS;
+         initial catalog=Sessio;
+         integrated security=True;
+         MultipleActiveResultSets=True;
+         App=EntityFramework&quot;"
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
