--- a/Session12/App.config
+++ b/Session12/App.config
@@ -3,20 +3,22 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Session12.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
     <add name="SessioEntities"
-         connectionString=
-         "metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;
-         provider=System.Data.SqlClient;
-         provider connection string=&quot;
-         data source=DESKTOP-NR8DVE4\SQLEXPRESS;
-         initial catalog=Sessio;
-         integrated security=True;
-         MultipleActiveResultSets=True;
+         connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;&#xD;&#xA;
+         provider=System.Data.SqlClient;&#xD;&#xA;
+         provider connection string=&quot;&#xD;&#xA;
+         data source=DESKTOP-NR8DVE4\SQLEXPRESS;&#xD;&#xA;
+         initial catalog=Sessio;&#xD;&#xA;
+         integrated security=True;&#xD;&#xA;
+         MultipleActiveResultSets=True;&#xD;&#xA;
          App=EntityFramework&quot;"
          providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -30,4 +32,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <userSettings>
+    <Session12.Properties.Settings>
+      <setting name="Login" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Timer" serializeAs="String">
+        <value>00:00:00</value>
+      </setting>
+    </Session12.Properties.Settings>
+  </userSettings>
 </configuration>
