--- a/Session12/Session12.csproj
+++ b/Session12/Session12.csproj
@@ -181,6 +181,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Recourse\icon_main.png" />
+    <Resource Include="Recourse\icon_postavchik.png" />
+    <Resource Include="Recourse\icon_product.png" />
+    <Resource Include="Recourse\icon_goinyourhouse.png" />
+    <Resource Include="Recourse\icon_exit.png" />
+    <Resource Include="Recourse\icon-Logo.png" />
+    <Content Include="Recourse\icon_orders.png" />
     <Content Include="Sessio.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Sessio.Context.cs</LastGenOutput>
@@ -195,5 +202,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
