--- a/Session12/App.config
+++ b/Session12/App.config
@@ -11,8 +11,18 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="SessioEntities" connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;provider=System.Data.SqlClient;provider connection string=&quot;&#xD;&#xA;          data source=DESKTOP-NR8DVE4\SQLEXPRESS;&#xD;&#xA;          initial catalog=Sessio;&#xD;&#xA;          integrated security=True;&#xD;&#xA;          MultipleActiveResultSets=True;&#xD;&#xA;          App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Sessio1Entities" connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NR8DVE4\SQLEXPRESS;initial catalog=Sessio1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--DESKTOP-NR8DVE4\SQLEXPRESS sql-ser-larisa\serv1215-->
+    <add name="Sessio1Entities"
+         connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;
+         provider=System.Data.SqlClient;
+         provider connection string=&quot;
+         data source=sql-ser-larisa\serv1215;
+         initial catalog=Sessio;
+         integrated security=True;
+         MultipleActiveResultSets=True;
+         App=EntityFramework&quot;"
+         providerName="System.Data.EntityClient" />
+    
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
