Посмотреть список продуктов начал делать окно редактирования

--- a/Session12/App.config
+++ b/Session12/App.config
@@ -16,8 +16,8 @@
          connectionString="metadata=res://*/Sessio.csdl|res://*/Sessio.ssdl|res://*/Sessio.msl;
          provider=System.Data.SqlClient;
          provider connection string=&quot;
-         data source=sql-ser-larisa\serv1215;
-         initial catalog=Sessio;
+         data source=DESKTOP-NR8DVE4\SQLEXPRESS;
+         initial catalog=Sessio1;
          integrated security=True;
          MultipleActiveResultSets=True;
          App=EntityFramework&quot;"
