--- a/Session12/Session12.csproj
+++ b/Session12/Session12.csproj
@@ -85,8 +85,8 @@
     <Compile Include="Order_Product.cs">
       <DependentUpon>Sessio.tt</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AddAndEditProductPage.xaml.cs">
-      <DependentUpon>AddAndEditProductPage.xaml</DependentUpon>
+    <Compile Include="Windows\AddAndEditProduct.xaml.cs">
+      <DependentUpon>AddAndEditProduct.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\PersonalCabinetPage.xaml.cs">
       <DependentUpon>PersonalCabinetPage.xaml</DependentUpon>
@@ -148,7 +148,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\AddAndEditProductPage.xaml">
+    <Page Include="Windows\AddAndEditProduct.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
