--- a/Session12/Session12.csproj
+++ b/Session12/Session12.csproj
@@ -64,6 +64,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DependencyProperties\AddAndEditProduct.Extension.cs" />
+    <Compile Include="DependencyProperties\ProductsListPage.Extension.cs" />
     <Compile Include="Gender.cs">
       <DependentUpon>Sessio.tt</DependentUpon>
     </Compile>
